fixed pdf containers for documents page

--- a/documents/index.html
+++ b/documents/index.html
@@ -52,8 +52,8 @@
             <strong>Data Science</strong>: the art of gaining insight through statistics. I appreciate the value that research can have in achieving organizational objectives, and believe that the best way to consistently provide positive spillovers to others is through understanding the consequences of our actions. As a data scientist, I view my role as a communicator, allowing teams to make informed decisions on the problems that face them.
           </p>
           <div class="single_doc_container">
-            <a href="#hide1" class="hide" id="hide1"><h3>Resume: Data Focused</h3></a>
-            <a href="#show1" class="show" id="show1">Collapse</a>
+            <a href="#hide_data" class="hide" id="hide_data"><h3>Resume: Data Focused</h3></a>
+            <a href="#show_data" class="show" id="show_data">Collapse</a>
             <iframe class="pdf" src="resume_data.pdf"></iframe>
           </div>
           <br>
@@ -61,8 +61,8 @@
             <strong>Public Policy</strong>: I am passionate about using my experience to better the lives of others. What better way to help others succeed in the modern world than assist in informed decision-making? With experience in economic development and government contracting (specifically with USAID), I am well equipped to assist teams on this front.
           </p>
           <div class="single_doc_container">
-            <a href="#hide2" class="hide" id="hide2"><h3>Resume: Public Policy Focused</h3></a>
-            <a href="#show2" class="show" id="show2">Collapse</a>
+            <a href="#hide_pol" class="hide" id="hide_pol"><h3>Resume: Public Policy Focused</h3></a>
+            <a href="#show_pol" class="show" id="show_pol">Collapse</a>
             <iframe class="pdf" src="resume_policy.pdf"></iframe>
           </div>
           <br>
@@ -70,8 +70,8 @@
             <strong>Government</strong>: Encouraging the welfare of our communities is something I am keenly interested in. I hope to use my talents in data analysis and emprirical research to assist in informed decision-making at any level of government where they can translate into tangible results for inclusive economic growth and development.
           </p>
           <div class="single_doc_container">
-            <a href="#hide3" class="hide" id="hide3"><h3>Federal Resume</h3></a>
-            <a href="#show3" class="show" id="show3">Collapse</a>
+            <a href="#hide_fed" class="hide" id="hide_fed"><h3>Federal Resume</h3></a>
+            <a href="#show_fed" class="show" id="show_fed">Collapse</a>
             <iframe class="pdf" src="resume_fed.pdf"></iframe>
           </div>
           <br>
@@ -79,8 +79,8 @@
             <strong>Transcript</strong>: my career at the University of Oregon, both undergraduate and graduate. The document is current as of 6/14/21.
           </p>
           <div class="single_doc_container">
-            <a href="#hide3" class="hide" id="hide3"><h3>Transcript</h3></a>
-            <a href="#show3" class="show" id="show3">Collapse</a>
+            <a href="#hide_transcript" class="hide" id="hide_transcript"><h3>Transcript</h3></a>
+            <a href="#show_transcript" class="show" id="show_transcript">Collapse</a>
             <iframe class="pdf" src="https://ibogley.github.io/website/documents/transcript.pdf"></iframe>
           </div>
         </div>
