updated page content for each tab, added high-res photo for background, altered sidebar size

--- a/expertise/index.html
+++ b/expertise/index.html
@@ -37,46 +37,42 @@
         </div>
         <div class="main">
           <h1>My Expertise</h1>
-          <h2>Macroeconomics and Policy Analysis</h2>
+          <h2>Economic Development, International Economics, Macroeconomics, and Policy Analysis</h2>
           <ul>
             <li>
-              <strong>Economic Development</strong>: Economic rate of return, Political Economy Analysis, USAID Government Contracting, public transportation, and road usage patterns.
+              <strong>Economic Development</strong>: Two graduate level courses in economic development specifically, one graduate level urban and regional economies class, and one graduate level course in political economies. Outside of the classroom I worked with The International Development Group LLC, where I assisted with USAID and MCC contracts relating to projects in the Western Balkans (barriers to businesss according to the World Bank), Niger (Baseline data report on road usage patterns and demographics), and the Indo-Pacific region (organizing company files relating to regional subcontractors).
             </li>
             <li>
-              <strong>International</strong>: Macroeconomic growth, development, international finance, and globalisation.
+              <strong>International Economics</strong>: Three graduate level courses (Globalization, 2 terms of Economic Development) and one undergraduate level (International Finance)
             </li>
             <li>
-              <strong>General</strong>: Classical, Kenyesian, Neoclassical, and Rational Expectation models; stability analysis.
+              <strong>Macroeconomics</strong>: Graduate course in macroeconomic theory covering stability analysis, comparative statics, and different macroeconomic models.
             </li>
             <li>
-              <strong>Policy Analysis</strong>: Game theory, behavioral economics, and public goods.
+              <strong>Policy Analysis</strong>: One term of Graduate level policy analysis.
             </li>
           </ul>
-          <h2>Data analysis</h2>
+          <h2>Data analysis and Mathematics</h2>
           <ul>
             <li>
-              <strong>Regression Analysis</strong>: Time series, cross-section, panel data.
+              <strong>Econometrics/Data analysis</strong>: Five quarters of Econometrics (Three in advanced, graduate level courses) throughout my undergraduate and graduate career. Other related courses include undergrauduate level courses in big data, forecasting, and business analytics.
             </li>
             <li>
-              <strong>Machine Learning</strong>
+              <strong>Machine Learning</strong>: One graduate level course (labeled EC 524: Econometrics) focused on machine learning through R. Used to predict NBA MVP candidates for each year since 1985.
             </li>
             <li>
-              <strong>Big Data</strong>: Parallel programming, cloud computing, command line interface, and database queries.
+              <strong>Languages/Tools</strong>:
+              <ul>
+                <li>R (Used in each of my econometrics courses and routinely for personal projects), Python (Used on personal projects)</li>
+                <li>Excel (Used in my graduate level Natural Resource Economics course to model resource consumption paths, as well as in my work with The International Development Group to visualize road usage demographics and patterns)</li>
+                <li>SQLite (Used in my undergraduate Business Analytics course)</li>
+                <li>Google BigQuery, Apache Spark, Git, and Github (All four introduced to me through my undergraduate Big Data course, utilized with R)</li>
+              </ul>
             </li>
             <li>
-              <strong>Languages/Tools</strong>: R, Python, Excel, and SQLite; Google BigQuery, Apache Spark, Git, and Github.
-            </li>
-            <li>
-              <strong>Mathematics</strong>: Statistics, fundamental analysis, and multivariable calculus.
+              <strong>Mathematics</strong>: Statistics (Two terms, one introductory (B), one intermediate (A)), fundamental analysis (one term, A-), proofs (one term, A), and multivariable calculus (one term, B-).
             </li>
           </ul>
-        <h1>My Hobbies/Passions</h1>
-        <ul>
-          <li><strong>The 2008 Financial Crisis</strong>: I enjoyed watching <a href="https://en.wikipedia.org/wiki/The_Big_Short_(film)">The Big Short</a>, and have experience studying the advantages and risks of credit. I have a basic understanding of how a speculative market for mortgages, mixed with the invention of credit default swaps and risk trading assets helped fuel the crisis. This is in addition to my studies of international finance and monetary policy.</li>
-          <li><strong>History/Political Economy Analysis</strong>: I enjoy incrementally learning the history and current state of our world. Playing total war games (<a href="https://en.wikipedia.org/wiki/Total_War:_Shogun_2">Shogun 2</a>, <a href="https://en.wikipedia.org/wiki/Total_War:_Three_Kingdoms">Three Kingdoms</a>) especially helped encourage basic personal research into how and why nations are the way they are. This compliments other forrays into American, Russian, Japanese, Chinese, and European history.</li>
-          <li><strong>Housing</strong>: I personally have felt the effects of the affordable housing crisis. I have interest in helping others avoid this issue, assisting in incrementally improving economic mobility and preventing further wealth inequality.</li>
-          <li><strong>Credit</strong>: I have learned about how credit can help assist anti-poverty initiatives, especially micro-finance programs. I also have respect for the role that responsible debt can have in helping others achieve entrepreneurial and personal goals.</li>
-        </ul>
         </div>
     </div>
   </body>
