--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
           <br>
           <h1>Highlights</h1>
           <ul>
-            <font size = "+2">
             <li><strong>Graduating in December of 2021</strong> with a <strong>Master's Degree</strong> in Applied Economics</li>
 
             <li>Academic focus on <strong>economic growth</strong>, <strong>development</strong>, <strong>globalisation</strong>, and <strong>international trade</strong></li>
@@ -77,7 +76,7 @@
             I am currently taking my final term of the University of Oregon as a Master's student. <b>Graduating in December of 2021</b>, I am looking for the opportunity to use my empirical training to help others pursue more efficient decision-making. I am especially passionate about economic growth and development, having previous experience using data analysis in this context at the <a href="https://www.internationaldevelopmentgroup.com/about/">International Development Group.</a>
           </p>
           <p>
-            My current job search focuses on roles begginning in <strong>January or February</strong> of 2022, or on <strong>part time internships</strong> for <strong>Fall</strong> of 2021.
+            My current job search focuses on roles begginning in <strong>January or February</strong> of 2022.
           </p>
           <p>
             To take a look at my resumes and transcripts, stop by the <a href="https://ibogley.github.io/website/documents/">documents</a> tab. For work samples, visit the <a href="https://ibogley.github.io/website/projects/">projects</a> tab. For an in-depth rundown of my areas of expertise, visit the <a href="https://ibogley.github.io/website/expertise/">expertise</a> tab.
