--- a/projects/index.html
+++ b/projects/index.html
@@ -72,6 +72,12 @@
           </div>
           <p></p>
           <div class="single_project_container">
+            <a href="#show_nba" class="hide" id="show_nba">NBA All-Star Predictions Using Logistic Regression (and other Machine Learning Algorithms)</a>
+            <a href="#hide_nba" class="show" id="hide_nba">Collapse</a>
+            <iframe class="pdf" src="nba/nba_allstar_predictions.pdf"></iframe>
+          </div>
+          <p></p>
+          <div class="single_project_container">
             <a href="#show_python" class="hide" id="show_python">EDA in Python: Women Representation in City Property of San Francisco, an
 Exploratoration</a>
             <a href="#hide_python" class="show" id="hide_python">Collapse</a>
