added nba presentation and code

--- a/projects/index.html
+++ b/projects/index.html
@@ -74,7 +74,7 @@
           <div class="single_project_container">
             <a href="#show_nba" class="hide" id="show_nba">NBA All-Star Predictions Using Logistic Regression (and other Machine Learning Algorithms)</a>
             <a href="#hide_nba" class="show" id="hide_nba">Collapse</a>
-            <iframe class="pdf" src="nba/nba_allstar_predictions.pdf"></iframe>
+            <iframe class="pdf" src="nba/nba_predictions.pdf"></iframe>
           </div>
           <p></p>
           <div class="single_project_container">
