--- a/projects/index.html
+++ b/projects/index.html
@@ -72,7 +72,7 @@
           </div>
           <p></p>
           <div class="single_project_container">
-            <a href="#show_nba" class="hide" id="show_nba">NBA All-Star Predictions Using Logistic Regression (and other Machine Learning Algorithms)</a>
+            <a href="#show_nba" class="hide" id="show_nba">NBA All-Star Predictions Using TidyModels (Machine Learning)</a>
             <a href="#hide_nba" class="show" id="hide_nba">Collapse</a>
             <iframe class="pdf" src="nba/nba_predictions.pdf"></iframe>
           </div>
