--- a/projects/index.html
+++ b/projects/index.html
@@ -47,22 +47,11 @@
           <p>
             Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries.
           </p>
+          <h2>Economic Development and Research</h2>
           <div class="single_project_container">
             <a href="#show_wb" class="hide" id="show_wb">Barriers to Business in Albania, Serbia, and North Macedonia</a>
             <a href="#hide_wb" class="show" id="hide_wb">Collapse</a>
             <iframe class="pdf" src="wb_barriers/wb_barriers.pdf"></iframe>
-          </div>
-          <p></p>
-          <div class="single_project_container">
-            <a href="#show_covid" class="hide" id="show_covid">Coronavirus Lockdowns and Trade Integration</a>
-            <a href="#hide_covid" class="show" id="hide_covid">Collapse</a>
-            <iframe class="pdf" src="trade/final.pdf"></iframe>
-          </div>
-          <p></p>
-          <div class="single_project_container">
-            <a href="#show_pres" class="hide" id="show_pres">US Presidential Poll Errors, 2016 and 2020</a>
-            <a href="#hide_pres" class="show" id="hide_pres">Collapse</a>
-            <iframe class="pdf" src="blog/blog_post_final.html"></iframe>
           </div>
           <p></p>
           <div class="single_project_container">
@@ -72,9 +61,38 @@
           </div>
           <p></p>
           <div class="single_project_container">
+            <a href="#show_covid" class="hide" id="show_covid">Coronavirus Lockdowns and Trade Integration</a>
+            <a href="#hide_covid" class="show" id="hide_covid">Collapse</a>
+            <iframe class="pdf" src="trade/final.pdf"></iframe>
+          </div>
+          <p></p>
+          <div class="single_project_container">
+            <a href="#show_cor" class="hide" id="show_cor">Corruption in Russia, a Comparison to the Principal Agent Model</a>
+            <a href="#hide_cor" class="show" id="hide_cor">Collapse</a>
+            <iframe class="pdf" src="corruption/Russian_corruption.pdf"></iframe>
+          </div>
+          <p></p>
+          <div class="single_project_container">
+            <a href="#show_lob" class="hide" id="show_lob">Lobbying in the United States, a Comparison to Economic Models of Special Interest Group Influence</a>
+            <a href="#hide_lob" class="show" id="hide_lob">Collapse</a>
+            <iframe class="pdf" src="lobbying/lobbying.pdf"></iframe>
+          </div>
+          <h2>Econometric Analysis</h2>
+          <p></p>
+          <div class="single_project_container">
+            <a href="#show_pres" class="hide" id="show_pres">US Presidential Poll Errors, 2016 and 2020</a>
+            <a href="#hide_pres" class="show" id="hide_pres">Collapse</a>
+            <iframe class="pdf" src="blog/blog_post_final.html"></iframe>
+          </div>
+          <p></p>
+          <div class="single_project_container">
             <a href="#show_nba" class="hide" id="show_nba">NBA All-Star Predictions Using TidyModels (Machine Learning)</a>
             <a href="#hide_nba" class="show" id="hide_nba">Collapse</a>
             <iframe class="pdf" src="nba/nba_predictions.pdf"></iframe>
+          </div>
+          <p></p>
+          <div class="single_project_container">
+            <a href="https://www.kaggle.com/ianbogley/housing-price-model/"></a>
           </div>
           <p></p>
           <div class="single_project_container">
