--- a/documents/index.html
+++ b/documents/index.html
@@ -50,15 +50,6 @@
           </p>
           <br>
           <p>
-            <strong>Government</strong>: Encouraging the welfare of our communities is something I am keenly interested in. I hope to use my talents in data analysis and emprirical research to assist in informed decision-making at any level of government where they can translate into tangible results for inclusive economic growth and development.
-          </p>
-          <div class="single_doc_container">
-            <a href="#hide_fed" class="hide" id="hide_fed"><h3>Federal Resume</h3></a>
-            <a href="#show_fed" class="show" id="show_fed">Collapse</a>
-            <iframe class="pdf" src="resume_fed.pdf"></iframe>
-          </div>
-          <br>
-          <p>
             <strong>Data Science</strong>: the art of gaining insight through statistics. I appreciate the value that research can have in achieving organizational objectives, and believe that the best way to consistently provide positive spillovers to others is through understanding the consequences of our actions. As a data scientist, I view my role as a communicator, allowing teams to make informed decisions on the problems that face them.
           </p>
           <div class="single_doc_container">
@@ -73,7 +64,7 @@
           <div class="single_doc_container">
             <a href="#hide_pol" class="hide" id="hide_pol"><h3>Resume: Public Policy Focused</h3></a>
             <a href="#show_pol" class="show" id="show_pol">Collapse</a>
-            <iframe class="pdf" src="resume_policy.pdf"></iframe>
+            <iframe class="pdf" src="resume_econdev.pdf"></iframe>
           </div>
           <br>
           <p>
