altered text on homepage

--- a/index.html
+++ b/index.html
@@ -42,29 +42,26 @@
              <small>- Kelli Smith, A Family for Every Child</small></strong></font>
           </p>
           <p>
-            My generation is growing up during the golden age of information and data. The internet, paired with other complimentary digital tools available to us, provide an excellent opportunity to re-evaluate the way we make decisions and plan for a better future. My passion is to use data analysis for economic development, growth, and informed decision-making. I have relevant experience using both written and visual mediums for communication of data-based insights.
+            The internet, paired with other complimentary digital tools available to us, provides an excellent opportunity to re-evaluate the way we make decisions and plan for a better future. My passion is to use data analysis for economic development, growth, and informed decision-making. I have relevant experience using both written, oral, and visual mediums for the communication of data-based insights.
           </p>
           <br>
           <h1>Highlights</h1>
           <ul>
-            <li><strong>Graduating in December of 2021</strong> with a <strong>Master's Degree</strong> in Applied Economics</li>
+            <li><strong>Master's Degree</strong> in Applied Economics</li>
 
-            <li>Academic focus on <strong>economic growth</strong>, <strong>development</strong>, <strong>globalisation</strong>, and <strong>international trade</strong></li>
+            <li>Academic focuses on <strong>economic growth</strong>, <strong>development</strong>, <strong>globalisation</strong>, and <strong>international trade</strong></li>
 
-            <li>Experience using both <strong>writing</strong> and <strong>visuals</strong> to describe data-based insights</li>
+            <li>Experience <strong>presenting statistical information</strong> to diverse audiences</li>
 
-            <li>Experience using <strong>Excel</strong> to visualize <strong>road usage demographics and trends</strong></li>
+            <li>Completed projects in <strong>Excel, R, and Python</strong>. Packages I am familiar with include Shiny, Tidyverse, data.table, TidyModels, Rvest, Numpy, Pandas, Sci-Kit Learn, Seaborn, and Statsmodels. I also have previous exposure to SQLite, Google BigQuery, HTML, and Javascript. I even created an R package for myself to quickly graph cost curves.</li>
 
-            <li>Experience proofreading <strong>USAID contract</strong> technical deliverables</li>
+            <li>Experience proofreading and writing <strong>USAID and MCC contract</strong> technical deliverables</li>
 
-            <li>Expertise in <strong>econometrics</strong> and <strong>statistics</strong></li>
-
-            <li>Schoolwork relating <strong>big data</strong>, <strong>machine-learning</strong>, and <strong>object-oriented-programming</strong> (R, Python)</li>
+            <li>Advanced, graduate level studies in <strong>econometrics</strong> and <strong>statistics</strong>. Topics include hypothesis testing, machine learning (regression, clustering, decision-tree, support-vector-machines), big data, forecasting, causal inference, experiment design, and bayesian analysis.</li>
 
             <li>Research into <strong>barriers to business</strong> in the <strong>Western Balkans</strong>, as well as the economic history of <strong>Russia</strong> since the fall of the USSR.</li>
 
             <li>Personal curiousity into subjects like <strong>The 2008 Financial Crisis</strong>, <strong>credit</strong> (microfinance), <strong>history/PEA</strong> (China, US, Japan), and <strong>nonviolent de-escalation/compromise based diplomacy</strong></li>
-            </font>
           </ul>
           <br>
           <p>
@@ -73,10 +70,10 @@
           <br>
           <h1>My current goal</h1>
           <p>
-            I am currently taking my final term of the University of Oregon as a Master's student. <b>Graduating in December of 2021</b>, I am looking for the opportunity to use my empirical training to help others pursue more efficient decision-making. I am especially passionate about economic growth and development, having previous experience using data analysis in this context at the <a href="https://www.internationaldevelopmentgroup.com/about/">International Development Group.</a>
+            I recently finished my studies and am currently serving temporarily as a Local Government Fiscal Notes Analyst for the Washington State Department of Commerce. Here, I summarize the fiscal impacts of potential bills in Economic Development, Energy Policy, Infrastructure, Telecommunications, and Financial Institutions. Beyond this role (finishing in March/April of 2022), I am looking for the opportunity to use my empirical training and sectoral expertise to help others pursue more efficient decision-making in a permanent position.
           </p>
           <p>
-            My current job search focuses on roles begginning in <strong>January or February</strong> of 2022.
+            My current job search focuses on roles beginning in <strong>April, May, or June</strong> of 2022.
           </p>
           <p>
             To take a look at my resumes and transcripts, stop by the <a href="https://ibogley.github.io/website/documents/">documents</a> tab. For work samples, visit the <a href="https://ibogley.github.io/website/projects/">projects</a> tab. For an in-depth rundown of my areas of expertise, visit the <a href="https://ibogley.github.io/website/expertise/">expertise</a> tab.
