--- a/documents/index.html
+++ b/documents/index.html
@@ -50,7 +50,7 @@
           </p>
           <br>
           <p>
-            <strong>Data Science</strong>: the art of gaining insight through statistics. I appreciate the value that research can have in achieving organizational objectives, and believe that the best way to consistently provide positive spillovers to others is through understanding the consequences of our actions. As a data scientist, I view my role as a communicator, allowing teams to make informed decisions on the problems that face them.
+            <strong>Data Science</strong>: the art of gaining insight through statistics. I appreciate the value that research can have in achieving organizational objectives, and believe that the best way to consistently provide positive impacts for others is through understanding the consequences of our actions. As a empirical researcher, I view my role as a communicator; allowing teams to make informed decisions on the problems that face them.
           </p>
           <div class="single_doc_container">
             <a href="#hide_data" class="hide" id="hide_data"><h3>Resume: Data Focused</h3></a>
@@ -59,7 +59,7 @@
           </div>
           <br>
           <p>
-            <strong>Public Policy</strong>: I am passionate about using my experience to better the lives of others. What better way to help others succeed in the modern world than assist in informed decision-making? With experience in economic development and government contracting (specifically with USAID), I am well equipped to assist teams on this front.
+            <strong>Public Policy</strong>: I am passionate about using my experience to better the lives of others. What better way to help others succeed in the modern world than assist in informed decision-making? With experience in economic development and government contracting (specifically with USAID, MCC, and Local Government Fiscal Policy), I am well equipped to assist teams on this front.
           </p>
           <div class="single_doc_container">
             <a href="#hide_pol" class="hide" id="hide_pol"><h3>Resume: Public Policy Focused</h3></a>
@@ -68,7 +68,7 @@
           </div>
           <br>
           <p>
-            <strong>Transcript</strong>: my career at the University of Oregon, both undergraduate and graduate. The document is current as of 6/14/21.
+            <strong>Transcript</strong>: my career at the University of Oregon, both undergraduate and graduate. The document is current as of 12/26/21.
           </p>
           <div class="single_doc_container">
             <a href="#hide_transcript" class="hide" id="hide_transcript"><h3>Transcript</h3></a>
