--- a/expertise/index.html
+++ b/expertise/index.html
@@ -40,31 +40,32 @@
           <h2>Economic Development, International Economics, Macroeconomics, and Policy Analysis</h2>
           <ul>
             <li>
-              <strong>Economic Development</strong>: Two graduate level courses in economic development specifically, one graduate level urban and regional economies class, and one graduate level course in political economies. Outside of the classroom I worked with The International Development Group LLC, where I assisted with USAID and MCC contracts relating to projects in the Western Balkans (barriers to businesss according to the World Bank), Niger (Baseline data report on road usage patterns and demographics), and the Indo-Pacific region (organizing company files relating to regional subcontractors).
+              <strong>Economic Development</strong>: My academic experience includes exposure to FDI, human capital, health, credit, population growth, Solow's Growth Model, the Spatial Equilibrium Model, redlining, renewable energies, natural resource extraction, and political economy analysis. My research projects include  barriers to private sector growth, real estate valuation based on proximity to public transit, corruption, and lobbying.
             </li>
             <li>
-              <strong>International Economics</strong>: Three graduate level courses (Globalization, 2 terms of Economic Development) and one undergraduate level (International Finance)
+              <strong>International Economics</strong>: My classroom curriculum included international finance and globalization. A research project I completed involved the effect of COVID-19 lockdowns on international trade integration.
             </li>
             <li>
               <strong>Macroeconomics</strong>: Graduate course in macroeconomic theory covering stability analysis, comparative statics, and different macroeconomic models.
             </li>
             <li>
-              <strong>Policy Analysis</strong>: One term of Graduate level policy analysis.
+              <strong>Policy Analysis</strong>: One term of Graduate level policy analysis. Experience in the field summarizing the budgetary impact of fiscal policy for local governments.
             </li>
           </ul>
           <h2>Data analysis and Mathematics</h2>
           <ul>
             <li>
-              <strong>Econometrics/Data analysis</strong>: Five quarters of Econometrics (Three in advanced, graduate level courses) throughout my undergraduate and graduate career. Other related courses include undergrauduate level courses in big data, forecasting, and business analytics.
+              <strong>Econometrics/Data analysis</strong>: Five quarters of Econometrics (Three in advanced, graduate level courses) throughout my undergraduate and graduate career. Other related courses include undergrauduate level courses in big data, forecasting, and business analytics. An implementation of this I completed involved using hypothesis testing to examine differences in general election polling errors between the 2016 and 2020 cycles.
             </li>
             <li>
-              <strong>Machine Learning</strong>: One graduate level course (labeled EC 524: Econometrics) focused on machine learning through R. Used to predict NBA MVP candidates for each year since 1985.
+              <strong>Machine Learning</strong>: One graduate level course (labeled EC 524: Econometrics) focused on machine learning through R. I have completed several projects in this subject, including predicting housing prices, NBA MVP's since 2000, and PGA Tour top 10 finishes. These projects used regression, clustering, decision trees, Support Vector Machines, and KNN algorithms.
             </li>
             <li>
               <strong>Languages/Tools</strong>:
               <ul>
                 <li>R (Used in each of my econometrics courses and routinely for personal projects), Python (Used on personal projects)</li>
                 <li>Excel (Used in my graduate level Natural Resource Economics course to model resource consumption paths, as well as in my work with The International Development Group to visualize road usage demographics and patterns)</li>
+                <li>HTML and Javascript: Used to build this website! I am currently in the process of self-learning Javascript.</li>
                 <li>SQLite (Used in my undergraduate Business Analytics course)</li>
                 <li>Google BigQuery, Apache Spark, Git, and Github (All four introduced to me through my undergraduate Big Data course, utilized with R)</li>
               </ul>
