altered expertise text

--- a/expertise/index.html
+++ b/expertise/index.html
@@ -43,7 +43,7 @@
               <strong>Economic Development</strong>: My academic experience includes exposure to FDI, human capital, health, credit, population growth, Solow's Growth Model, the Spatial Equilibrium Model, redlining, renewable energies, natural resource extraction, and political economy analysis. My research projects include  barriers to private sector growth, real estate valuation based on proximity to public transit, corruption, and lobbying.
             </li>
             <li>
-              <strong>International Economics</strong>: My classroom curriculum included international finance and globalization. A research project I completed involved the effect of COVID-19 lockdowns on international trade integration.
+              <strong>International Economics</strong>: My classroom curriculum included international finance and globalization. A research project I completed involved studying the effect of COVID-19 lockdowns on international trade integration.
             </li>
             <li>
               <strong>Macroeconomics</strong>: Graduate course in macroeconomic theory covering stability analysis, comparative statics, and different macroeconomic models.
@@ -55,10 +55,13 @@
           <h2>Data analysis and Mathematics</h2>
           <ul>
             <li>
-              <strong>Econometrics/Data analysis</strong>: Five quarters of Econometrics (Three in advanced, graduate level courses) throughout my undergraduate and graduate career. Other related courses include undergrauduate level courses in big data, forecasting, and business analytics. An implementation of this I completed involved using hypothesis testing to examine differences in general election polling errors between the 2016 and 2020 cycles.
+              <strong>Econometrics/Data analysis</strong>: Five quarters of Econometrics (Three in advanced, graduate level courses) throughout my undergraduate and graduate career. Other related courses include undergrauduate level courses in big data, forecasting, and business analytics. Tools I have used include OLS, instrumental variables, and causal inference. An implementation of this I completed involved using hypothesis testing to examine differences in general election polling errors between the 2016 and 2020 cycles.
             </li>
             <li>
               <strong>Machine Learning</strong>: One graduate level course (labeled EC 524: Econometrics) focused on machine learning through R. I have completed several projects in this subject, including predicting housing prices, NBA MVP's since 2000, and PGA Tour top 10 finishes. These projects used regression, clustering, decision trees, Support Vector Machines, and KNN algorithms.
+            </li>
+            <li>
+              <strong>Surveys</strong> My volunteer work involved writing survey questions, collecting data, and interpreting responses. For ShelterCare, I wrote a report on the future use of baseline employee satisfaction survey data. With A Family for Every Child, I wrote survey questions and recorded responses.
             </li>
             <li>
               <strong>Languages/Tools</strong>:
