added titanic kaggle project

--- a/projects/index.html
+++ b/projects/index.html
@@ -92,7 +92,7 @@
           </div>
           <br>
           <div class="single_project_container">
-            <a href="https://www.kaggle.com/ianbogley/housing-price-model/"></a>
+            <a href="https://www.kaggle.com/ianbogley/titanic-predicting-survivors-with-tidymodels">Kaggle Project: Predicting Titanic Survival with Tidymodels</a>
           </div>
           <br>
           <div class="single_project_container">
