fixed src for project display on homepage

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div id="container_modal_projects">
         <div id="modal_projects">
             <div id="container_project_display">
-                <iframe id="iframe_project_display" src="../project_files/trade/covid_lockdowns_trade.pdf"></iframe>
+                <iframe id="iframe_project_display" src="project_files/trade/covid_lockdowns_trade.pdf"></iframe>
             </div>
             <div class="wrapper_modal_nav">
                 <div class="container_modal_title">My Projects and Documents</div>
