fixed an issue where documents wouldn't display

--- a/policy/index.html
+++ b/policy/index.html
@@ -128,6 +128,7 @@
                         <li><button id="button_policyproject_transportation">Research Proposal: Real Estate Hedonic Pricing Valuation of Access to Public Transportation</button></li>
                         <li><button id="button_policyproject_russia">Corruption in Russia</button> </li>
                         <li><button id="button_policyproject_lobbying">Lobbying in the United States</button></li>
+                        <li><button id="button_policyproject_fiscalnote">Local Government Fiscal Note, SSB5722</button></li>
                     </ul>
                 </div>
                 <div class="wrapper_projects" id="wrapper_documents">
