--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="policy/index.html"> Policy </a>
             </div>
             <div class="element_nav">
-                <a id="active_nav" href=""> Home </a>
+                <a id="active_nav" href="">Home</a>
             </div>
         </div>
     </header>
@@ -91,6 +91,7 @@
                         <li><button id="button_policyproject_transportation">Research Proposal: Real Estate Hedonic Pricing Valuation of Access to Public Transportation</button></li>
                         <li><button id="button_policyproject_russia">Corruption in Russia</button> </li>
                         <li><button id="button_policyproject_lobbying">Lobbying in the United States</button></li>
+                        <li><button id="button_policyproject_fiscalnote">Local Government Fiscal Note, SSB5722</button></li>
                     </ul>
                 </div>
                 <div class="wrapper_projects" id="wrapper_documents">
