removed pga project

--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
                 <li><strong>Sectoral Policy Expertise:</strong> economic development, regional growth, international trade, infrastructure, broadband internet access, energy policy, utilities, financial institutions, political economy analysis and quality of governance.</li>
                 <li><strong>Data Analysis:</strong> Data collection, data scrubbing/wrangling, visualization, research design and implementation. Advanced econometrics, machine learning, and big data.</li>
             </ul>
-            <h3>Previous work:</h3>
+            <h3>Previous Research:</h3>
             <ul>
                 <li>Barriers to Business in Albania, Serbia, and North Macedonia</li>
                 <li>General Election Polling Errors (Hypothesis testing)</li>
-                <li>Predicting top ten finishers in the PGA Tour (Machine Learning, R)</li>
                 <li>Predicting Survivors from the Titanic (Machine Learning, R)</li>
                 <li>Predicting NBA AllStar Selections (Machine Learning, R)</li>
                 <li>Employee Satisfaction Survey, Basline Data Report (Surveys)</li>
