added data specialist experience to data tab

--- a/data/index.html
+++ b/data/index.html
@@ -38,13 +38,17 @@
                 <img src="visuals/visualization_map.png" alt="" >
             </div> 
             <p>
-                As an intern with the International Development Group, I continually found ways to translate statistical relationships to cohesive visuals. For an MCC Road development project, I was tasked with visualizing data in the baseline data report. We were set to improve a family of highways in Southern Niger, which would encourage travel and trade throughout the region. My job was to graph various metrics associated with intitial road users, providing a baseline for future observations during and after construction.
-            </p>           
-            <p>
-                I have also routinely completed animations and visualizations for projects. You can take a look at some here:
+                In my work with Energy Trust of Oregon, I was tasked with creating Power BI Dashboards to clearly visualize the state of data quality issues in the data warehouse. I also presented visual breakdowns of available metrics related to undeliverable checks.
             </p>
+            <p>
+                For an MCC Road development project during my Internship with IDG, I visualized data in a baseline data report for consumption by USAID. This involved touching base with team members about iterations that worked well in previous reports, gathering data, and using excel to create charts that clearly communicate statistical trends in the data.
+            </p>           
             <br>
             <br>
+            <h1>Databases</h1>
+            <p>
+                With Energy Trust of Oregon, I was responsible for creating SQL queries in Power BI capable of indicating data quality issues. This data came from the organization's data warehouse, which I became familar with. I also spent time in college studying databases, going over topics like relational databases and cloud computing (Google BigQuery).
+            </p>
             <h1>Data Analysis/Research</h1>
             <p>
                 My previous experiences have often hinged on using data to effectively tackle real-world problems. 
